# cadit

./: Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/ui/: mod.rs
crates/app/src/ui/organisms/: workspace.rs
crates/cadit/: Cargo.toml
crates/cadit/src/: error.rs  lib.rs  main.rs  menu.rs
crates/cadit/src/file/: mod.rs
crates/cadit/src/panes/: editor.rs  features.rs
crates/cadit/src/render/: color_id.rs  egui_transfer.rs  mod.rs  pbr_scene.rs  renderer.rs  scene.rs
crates/cadit/src/render/camera/: mod.rs
crates/cadit/src/render/lights/: ambient.rs  directional.rs  point.rs
crates/cadit/src/render/mesh/: mod.rs
crates/cadit/src/render/model/: material.rs  mod.rs
crates/cadit/src/render/scene/: mod.rs
crates/cadit/src/render/shaders/: edge.frag  edge.vert  point.vert  surface.frag  surface.vert
crates/cadit/src/ui/: mod.rs
crates/cadit/src/ui/atoms/: camera.rs  gizmo.rs  mod.rs  object_scene.rs  scene.rs  scene_viewer.rs
crates/cadit/src/ui/math/: mod.rs
crates/cadit/src/ui/organisms/: menu.rs  mod.rs  status_bar.rs  workspace.rs
crates/cadit/src/ui/organisms/panes/: editor.rs  features.rs  mod.rs
crates/cadit/src/ui/organisms/panes/editor/: assembly.rs  file.rs  mod.rs  part.rs
crates/components/: Cargo.toml
crates/components/src/: gizmo.rs  lib.rs
crates/components/src/editors/: mod.rs  part.rs
crates/components/src/scene/: egui_transfer.rs  gui_renderer.rs  mod.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  renderer.rs  scene.rs
crates/render/src/camera/: mod.rs
crates/render/src/lights/: ambient.rs  directional.rs  mod.rs  point.rs
crates/render/src/mesh/: mod.rs
crates/render/src/model/: edge.rs  material.rs  mod.rs  point.rs  surface.rs
crates/render/src/scene/: mod.rs
crates/render/src/shaders/: compositing.frag  edge.frag  edge.vert  opaque_surface.frag  point.frag  point.vert  surface.frag  surface.vert  translucent_surface.frag
crates/render/src/shaders/includes/: opaque_material_buffer.frag  surface_lighting.frag  surface_lighting_buffers.frag  translucent_material_buffer.frag
crates/space/: Cargo.toml
crates/space/src/: eline.rs  eplane.rs  espace.rs  evector.rs  exp.rs  hspace.rs  hvector.rs  lib.rs
crates/spline/: Cargo.toml
crates/spline/src/: bezier_curve.rs  bezier_surface.rs  control_points.rs  curve.rs  knots.rs  lib.rs  math.rs  nurbs_curve.rs
crates/spline/src/curves/: mod.rs  nurbs.rs
crates/spline/src/math/: b_spline.rs  basis.rs  bezier.rs  h_point.rs  knot_vector.rs  line.rs  mod.rs  nurbs.rs  point.rs  vec2.rs  vec3.rs  vec4.rs  vector.rs  vector_macros.rs  w_point.rs
crates/spline/src/surfaces/: mod.rs  nurbs.rs
crates/tesselate/: Cargo.toml
crates/tesselate/src/: lib.rs
crates/tesselate/src/exact/: bezier_curve.rs  mod.rs
crates/tesselate/src/naive/: bezier_curve.rs  bezier_surface.rs  mod.rs
crates/ui_components/: Cargo.toml
crates/ui_components/src/: lib.rs
crates/ui_components/src/scene/: egui_transfer.rs  mod.rs
crates/vector_exp/: Cargo.toml
crates/vector_exp/src/: eline.rs  espace.rs  evector.rs  hspace.rs  hvector.rs  lib.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: gizmo.rs  lib.rs
crates/widgets/src/animation/: mod.rs
crates/widgets/src/editors/: part.rs
crates/widgets/src/panes/: mod.rs
crates/widgets/src/scene/: gui_renderer.rs  mod.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs
notes/: roadmap.md
resources/assets/: BackTexture.xcf  BottomTexture.xcf  FrontTexture.xcf  LeftTexture.xcf  RightTexture.xcf  TopTexture.xcf  gizmo.blend  gizmo.mtl  gizmo2.blend  gizmo2.blend1  gizmo2.mtl  gizmo2_geometry.blend
tools/: Cargo.toml
tools/src/: lib.rs
