[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widgets = { path = "../crates/widgets" }
window = { path = "../crates/window" }
render = { path = "../crates/render" }
eframe = "0.19.0"
egui_dock = { path = "../../egui_dock", features = ["serde"] }
egui-modal = "0.1.7"
thiserror = "1.0.37"
cgmath = { version = "0.18.0" }
