[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
components = { path = "../crates/components" }
render = { path = "../crates/render" }
spline = { path = "../crates/spline" }
space = { path = "../crates/space" }
eframe = "0.20.1"
egui_dock = { version = "0.3.1", features = ["serde"] }
egui-modal = "0.1.8"
thiserror = "1.0.38"
cgmath = { version = "0.18.0" }
