[package]
name = "cadit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui_dock = { path = "../../../egui_dock", features = ["serde"] }
egui-modal = "0.1.7"
thiserror = "1.0.37"
byteorder = "1.4.3"
egui_winit_vulkano = { path = "../../../egui_winit_vulkano" }
winit = "0.27.5"
vulkano-util = "0.32"
vulkano = "0.32"
vulkano-shaders = "0.32"
bytemuck = "1.12.2"
cgmath = { version = "0.18.0" }
crevice = { version = "0.12.0", features = ["cgmath"] }
