[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
crevice = { version = "0.12.0", features = ["cgmath"] }
vulkano = "0.32.3"
cgmath = { version = "0.18.0" }
vulkano-shaders = "0.32"
