[package]
name = "tesselate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spline = { path = "../spline" }
render = { path = "../render" }
space = { path = "../space" }
cgmath = { version = "0.18.0" }
