[package]
name = "ui_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render = { path = "../render" }
cgmath = { version = "0.18.0" }
eframe = "0.20.1"
egui_winit_vulkano = "0.22.0"
vulkano = "0.32.3"
bytemuck = "1.12.3"
vulkano-shaders = "0.32"
winit = "0.27.5"
vulkano-util = "0.32"
