[package]
name = "widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render = { path = "../render" }
cgmath = { version = "0.18.0" }
eframe = "0.19.0"
egui_winit_vulkano = { path = "../../../egui_winit_vulkano" }
vulkano = "0.32"
bytemuck = "1.12.2"
vulkano-shaders = "0.32"
